k8s/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superk8s-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: superk8s
  type: LoadBalancer
