k8s/4.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superk8s-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: superk8s.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: superk8s-service
                port:
                  number: 8080
